--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -3,11 +3,16 @@
 nav {
 	display: flex;
 	justify-content: space-between;
-	padding: 0 24px;
 	border-bottom: 1px solid var(--very-light-pink);
+	position: fixed;
+	top: 0;
+	width: 100%;
+	background-color: white;
 }
 .menu {
 	display: none;
+	margin-left: 10px;
+	cursor: pointer;
 }
 .nav-logo {
 	width: 100px;
@@ -23,6 +28,10 @@ nav {
 }
 .navbar-left {
 	display: flex;
+	margin-left: 10px;
+}
+.navbar-right {
+	margin-right: 10px;
 }
 .navbar-left ul {
 	margin-left: 12px;
@@ -44,9 +53,11 @@ nav {
 	color: var(--very-light-pink);
 	font-size: var(--sm);
 	margin-right: 12px;
+	cursor: pointer;
 }
 .navbar-shopping-cart {
 	position: relative;
+	cursor: pointer;
 }
 .navbar-shopping-cart div {
 	width: 16px;
@@ -62,7 +73,7 @@ nav {
 	justify-content: center;
 	align-items: center;
 }
-@media (max-width: 640px) {
+@media (max-width: 780px) {
 	.menu {
 		display: block;
 	}
