--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -9,6 +9,9 @@
 	position: absolute; //nuevo
 	top: 60px;
 	right: 50px;
+	background-color: white;
+	animation: swipeLeftMenu 0.3s ease;
+	z-index: 10;
 
 	ul {
 		list-style: none;
@@ -42,3 +45,12 @@
 		}
 	}
 }
+
+@keyframes swipeLeftMenu {
+	0% {
+	  opacity: 0;
+	}
+	100% {
+	  opacity: 1;
+	}
+  }
