--- a/src/styles/MyOrder.scss
+++ b/src/styles/MyOrder.scss
@@ -8,25 +8,34 @@
 	right: 0;
 	background-color: white;
 	top: 60px;
-	bottom: 0;
 	border-radius: 6px;
 	border: 1px solid var(--very-light-pink);
+	bottom: auto;
+	max-height: 90vh;
+	animation: swipeLeft 0.3s ease;
+	overflow-y: auto;
+	z-index: 9;
 }
 .title-container {
 	display: flex;
+	align-items: center;
+	cursor: pointer;
+	margin-bottom: 2rem;
 
 	img {
 		transform: rotate(180deg);
-		margin-right: 14px;
+		margin-right: 20px;
+		width: .6rem;
 	}
 }
 
-.title {
+.title-order {
 	font-size: var(--lg);
 	font-weight: bold;
 }
 
 .order {
+	position: relative;
 	display: grid;
 	grid-template-columns: auto 1fr;
 	gap: 16px;
@@ -67,9 +76,17 @@
 	height: 50px;
 }
 
+@keyframes swipeLeft {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
 
 @media (max-width: 640px) {
-	.my-order {
+	.MyOrder {
 		width: 100%;
 	}
 }
